kubernetes/kube-prod-d1/archivebox/prod-d1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: archivebox
  labels:
    name: archivebox
