kubernetes/kube-prod-d1/archivebox/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: archivebox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: archivebox
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      restartPolicy: Always
      containers:
      - name: archivebox
        args: ["server", "--quick-init"] # 
        image: archivebox/archivebox:latest@sha256:1a5a37331091d9df865ead2b9c231aa5a892fc26fe0422ce6140d9e2d9532327
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
        volumeMounts:
          - name: archivebox-storage
            mountPath: /data
          - name: archivebox-nfs
            mountPath: /data/archive
      volumes:
        - name: archivebox-storage
          persistentVolumeClaim:
            claimName: archivebox-pvc
        # - name: archivebox-backup-storage ## Uncomment this and set claimname to PVC
        #   persistentVolumeClaim:
        #     claimName: pvc-aa99a347-4490-415b-aa75-13e2b6d8afea
        #     readOnly: false
        - name: archivebox-nfs
          nfs:
            server: 10.15.21.5
            path: /mnt/user/archives/websites/archivebox
