kubernetes/kube-prod-d1/archivebox/prod-d1/pywb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pywb
  namespace: archivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pywb
  template:
    metadata:
      labels:
        app: pywb
    spec:
      containers:
        - name: pywb
          image: webrecorder/pywb:latest@sha256:233c7a2c34eaa6af0f7958b2c70ae4b75082b5e6d5bc4dae2ee180dad4b3d671
          command: ["/bin/sh", "-c"]
          args:
            - >
              (wb-manager init default || test $$? -eq 2) &&
              wb-manager add default /archivebox/*/warc/*.warc.gz;
              wayback;
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: archivebox-nfs
              mountPath: /archivebox
            - name: pywb-data
              mountPath: /webarchive
      volumes:
        - name: archivebox-nfs
          nfs:
            server: 10.15.21.5
            path: /mnt/user/archives/websites/archivebox
        # - name: pywb-backup-storage ## Uncomment this and set claimname to PVC
        #   persistentVolumeClaim:
        #     claimName: pvc-062a1899-9eea-439f-9da3-f92fd5beb15b
        #     readOnly: false
        - name: pywb-data
          persistentVolumeClaim:
            claimName: pywb-pvc
