kubernetes/kube-prod-d1/archivebox/prod-d1/sonic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonic
  namespace: archivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonic
  template:
    metadata:
      labels:
        app: sonic
    spec:
      containers:
        - name: sonic
          image: archivebox/sonic:latest@sha256:452064bfdab535fb8a6019937f1d753e0dfb2c94d2a87ebd166e2d556de78692
          ports:
            - containerPort: 1491
          volumeMounts:
            - name: sonic-data
              mountPath: /var/lib/sonic/store
      volumes:
        - name: sonic-data
          persistentVolumeClaim:
            claimName: sonic-pvc
        # - name: sonic-backup-storage ## Uncomment this and set claimname to PVC
        #   persistentVolumeClaim:
        #     claimName: pvc-1f9ee1d4-6360-4bc3-8068-6cd268ed28ac
        #     readOnly: false
