kubernetes/kube-prod-d1/archivebox/prod-d1/pywb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pywb-ingress
  namespace: archivebox
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-pywb-forwarded-headers@kubernetescrd

spec:
  rules:
    - host: pywb.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pywb-service
                port:
                  number: 8080
  tls:
    - hosts:
        - pywb.kube-prod-d1.mclacken.net
      secretName: pywb-certificate-secret
